# db-data-library

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  README.md  dob_cofos.csv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  open-data.yml  quaterly-updates.yml  single-runner.yml  test.yml  update_image.yml
dashboard/: LICENSE  README.md  app.py  requirements.txt
dashboard/src/: __init__.py  dataset.py  library.py  s3.py  utils.py
tests/: __init__.py  test_archive.py  test_config.py  test_ingest.py  test_ingest_script.py  test_s3.py  test_utils.py  test_validator.py
tests/data/: bpl_libraries.yml  nypl_libraries.yml  socrata.yml  url.yml
